style.css
 /* Reset the space of the webpage */
* {
    margin: 0px;
    padding: 0px;
    font-family: Verdana, Tahoma, sans-serif;
 }

 main {
  background-color: #ffffff;
  padding: 20px;
  margin: 20px;
}


h1 {
  color: #2B4025;
  margin-bottom: 20px;
  font-size: 2rem;
  text-align: center;
}
 
 /* Navigation Bar */
 ul {
   list-style-type: none;
   background-color: #4E7544;
   overflow: hidden;
   padding: 10px;
 }
 
 li {
   display: inline;
 }
 
 li a {
   text-decoration: none;
   color: #F0F4EF;
   padding: 10px;
 }
 
 li a:hover {
   background-color: #2B4025;
 }
 
 .active {
   background-color: #2B4025;
 }
 
 .container {
   position: relative;
 }
 
 .center {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #2B4025;
   font-size:3vw;
   white-space: nowrap;
 }
 
/* Home page */
 

/* Project page */
.projects {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  gap: 20px;
}

.project {
  display: block;
  text-align: center;
  text-decoration: none;
  padding: 10px;
  transition: opacity 0.3s ease;
  width: calc(33.333% - 40px);
}

.project:hover {
  opacity: 0.8;
}

.project img {
  width: 100%;
  height: 300px;
  object-fit: cover;
  margin-bottom: 10px;
}

.project p {
  font-size: 1rem;
  margin: 0;
  text-decoration: none;
  color: #2B4025;
}

.project a{
  text-decoration: none;
}

@media (max-width: 800px) {
  .project {
      width: calc(50% - 40px);
  }
}

@media (max-width: 600px) {
  .project {
      width: 100%;
  }
}

/* Contact page */

.contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
}

.contact-box {
  background-color: #ffffff;
  border: 2px solid #4E7544; 
  border-radius: 15px; 
  padding: 20px 30px;
  width: 80%; 
  max-width: 1000px; 
}

.contact-box p {
  font-size: 1.2rem;
  line-height: 1.8;
  margin: 10px 0;
}

.contact-box a {
  color: #2B4025; 
  opacity: 0.8;
  transition: opacity 0.3s ease;
}

.contact-box a:hover {
  opacity: 1;  
}

